sample-client-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sample-client-service
spec:
  selector:
    app: sample-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
