sample-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-client-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: sample-client.com
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name : sample-client-service
                port:
                  number: 80
